Release v27.8.0 zoned work intervals
